# blobwars

./: .clang-format  .gitignore  Makefile  Makefile.windows  README.md  blobwars.nsi  blobwars.spec  makefile  makefile.windows  meson.build
data/: arcticWastes  arcticWastes.yaml  assimilator  assimilator.yaml  caves1  caves1.yaml  caves2  caves2.yaml  caves3  caves3.yaml  caves4  caves4.yaml  cheatWidgets.yaml  comm  comm.yaml  credits  credits.md  defEnemies.yaml  defItems.yaml  ending  ending.yaml  finalBattle  finalBattle.yaml  floodedTunnel1  floodedTunnel1.yaml  floodedTunnel2  floodedTunnel2.yaml  floodedTunnel3  floodedTunnel3.yaml  floodedTunnel4  floodedTunnel4.yaml  gameOverWidgets.yaml  grasslands1  grasslands1.yaml  grasslands2  grasslands2.yaml  grasslands3  grasslands3.yaml  hq  hq.yaml  (+37 more)
data/ca/: cheatWidgets.yaml  credits  credits.md  ending.yaml  gameOverWidgets.yaml  inGameWidgets.yaml  introText.yaml  joystickWidgets.yaml  keyboardWidgets.yaml  levelBrief.yaml  optionWidgets.yaml  titleWidgets.yaml
data/da/: cheatWidgets.yaml  credits  credits.md  ending.yaml  gameOverWidgets.yaml  inGameWidgets.yaml  introText.yaml  joystickWidgets.yaml  keyboardWidgets.yaml  levelBrief.yaml  license  optionWidgets.yaml  titleWidgets.yaml
data/de/: cheatWidgets.yaml  credits  credits.md  ending.yaml  gameOverWidgets.yaml  inGameWidgets.yaml  introText.yaml  joystickWidgets.yaml  keyboardWidgets.yaml  levelBrief.yaml  license  optionWidgets.yaml  titleWidgets.yaml
data/es/: cheatWidgets.yaml  credits  credits.md  ending.yaml  gameOverWidgets.yaml  inGameWidgets.yaml  introText.yaml  joystickWidgets.yaml  keyboardWidgets.yaml  levelBrief.yaml  optionWidgets.yaml  titleWidgets.yaml
data/nl/: cheatWidgets.yaml  credits  credits.md  ending.yaml  gameOverWidgets.yaml  inGameWidgets.yaml  introText.yaml  joystickWidgets.yaml  keyboardWidgets.yaml  levelBrief.yaml  license  optionWidgets.yaml  titleWidgets.yaml
data/pl/: cheatWidgets.yaml  credits  credits.md  ending.yaml  gameOverWidgets.yaml  inGameWidgets.yaml  introText.yaml  joystickWidgets  joystickWidgets.yaml  keyboardWidgets.yaml  levelBrief.yaml  optionWidgets.yaml  titleWidgets.yaml
data/sv/: cheatWidgets.yaml  credits  credits.md  ending.yaml  gameOverWidgets.yaml  inGameWidgets.yaml  introText.yaml  joystickWidgets.yaml  keyboardWidgets.yaml  levelBrief.yaml  license  optionWidgets.yaml  titleWidgets.yaml
doc/: changes  contents.html  hacking  index.html  manual.css  manual.html  manual.md  porting  readme  samples
icons/: blobwars.desktop
locale/: ca.mo  ca.po  da.mo  da.po  de.mo  de.po  es.mo  es.po  fr.mo  fr.po  nl.mo  nl.po  pl.mo  pl.po  readme  sv.mo  sv.po
music/: end.tags
patches/: blobwars-1.09b2-font_error.patch  blobwars-1.10-options.patch  es.po.patch
sound/: machinegun
src/: CAudio.cpp  CAudio.h  CBoss.cpp  CBoss.h  CCollision.cpp  CCollision.h  CConfig.cpp  CConfig.h  CCutscene.cpp  CCutscene.h  CData.cpp  CData.h  CEffect.cpp  CEffect.h  CEngine.cpp  CEngine.h  CEntity.cpp  CEntity.h  CFileData.cpp  CFileData.h  CGame.cpp  CGame.h  CGameData.cpp  CGameData.h  CGameObject.cpp  CGameObject.h  CGraphics.cpp  CGraphics.h  CHashtable.cpp  CHashtable.h  CHub.cpp  CHub.h  CJoystick.cpp  CJoystick.h  CKeyboard.cpp  CKeyboard.h  CLineDef.cpp  CLineDef.h  CList.cpp  CList.h  (+133 more)
tools/: credits2md.py  defEnemies2yaml.py  defItems2yaml.py  ending2yaml.py  hub2yaml.py  introText2yaml.py  levelBrief2yaml.sh  mainSprites2yaml.py  makedefs.sh  map2yaml.py  tidyHeaders.sh  weapons2yaml.py  widgets2yaml.py
