sources = [
	'CAudio.cpp',
	'CBoss.cpp',
	'CCollision.cpp',
	'CConfig.cpp',
	'CCutscene.cpp',
	'CData.cpp',
	'CEffect.cpp',
	'CEngine.cpp',
	'CEntity.cpp',
	'CFileData.cpp',
	'CGame.cpp',
	'CGameData.cpp',
	'CGameObject.cpp',
	'CGraphics.cpp',
	'CHub.cpp',
	'CJoystick.cpp',
	'CKeyboard.cpp',
	'CLineDef.cpp',
	'CList.cpp',
	'CMap.cpp',
	'CMath.cpp',
	'CMedalServer.cpp',
	'CObjective.cpp',
	'CPak.cpp',
	'CParticle.cpp',
	'CPersistData.cpp',
	'CPersistant.cpp',
	'CRadarBlip.cpp',
	'CReplayData.cpp',
	'CSpawnPoint.cpp',
	'CSprite.cpp',
	'CSwitch.cpp',
	'CTeleporter.cpp',
	'CTrain.cpp',
	'CTrap.cpp',
	'CWeapon.cpp',
	'CWidget.cpp',
	'aquaBoss.cpp',
	'bosses.cpp',
	'bullets.cpp',
	'cutscene.cpp',
	'droidBoss.cpp',
	'effects.cpp',
	'enemies.cpp',
	'entities.cpp',
	'explosions.cpp',
	'finalBattle.cpp',
	'galdov.cpp',
	'game.cpp',
	'graphics.cpp',
	'hub.cpp',
	'info.cpp',
	'init.cpp',
	'intro.cpp',
	'items.cpp',
	'lineDefs.cpp',
	'loadSave.cpp',
	'map.cpp',
	'mapData.cpp',
	'mias.cpp',
	'mission.cpp',
	'objectives.cpp',
	'obstacles.cpp',
	'options.cpp',
	'particles.cpp',
	'player.cpp',
	'resources.cpp',
	'spawnPoints.cpp',
	'switches.cpp',
	'tankBoss.cpp',
	'teleporters.cpp',
	'title.cpp',
	'trains.cpp',
	'traps.cpp',
	'triggers.cpp',
	'weapons.cpp',
	'widgets.cpp',
]

deps = [
	sdl2,
	sdl2_mixer,
	sdl2_image,
	sdl2_net,
	sdl2_ttf,
	zlib,
]

executable('blobwars',
	sources,
	'main.cpp',
	dependencies: deps,
	install: true,
	install_dir: bindir,
)

#executable('mapeditor',
#	sources,
#	'mapEditor.cpp',
#	dependencies: deps,
#)

#pak = executable('pak',
#	'CFileData.cpp',
#	'pak.cpp',
#	dependencies: zlib,
#)
